cmake_minimum_required(VERSION 3.10)
project(daniela_cpp_4_12)

set(CMAKE_CXX_STANDARD 98)

add_executable(daniela_cpp_4_12 main.cpp Cell.h Cell.cpp Field.h Field.cpp GTree.h HockeyTeam.cpp HockeyTeam.cpp Location.h Location.cpp Player.cpp Player.h Rules.cpp Rules.h Simulation.h Simulation.cpp Speed.h Speed.cpp TreeNode.h Goalie.cpp Goalie.h Defensemen.cpp Defensemen.h Forwards.cpp Forwards.h)